...
                        Spacer(modifier = Modifier.height(12.dp))
                        Text(detail, style = MaterialTheme.typography.bodyLarge)
                        Spacer(modifier = Modifier.height(32.dp))
                        Button(
                            onClick = ::cancelAndFinish,
                        ) {
                            Text("Cancel")
                        }
                    }
                }
            }
        }
        onBackPressedDispatcher.addCallback(
...
